add: groups to frontend, fix: groups logic
